# Auto_Shorts_Generator

./: LICENSE  README.ko.md  README.md  extractor.py  main.py  pyproject.toml  settings.json  test.py  test_hang.py  video_editor.py
